# Firmware

./: .gitignore  .licenserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  esp-idf.fish  esp-idf.sh  gdbinit  nvs.csv  partitions.csv  sdkconfig.debug  sdkconfig.defaults  sdkconfig.jtag  sdkconfig.release
docs/: CMakeLists.txt  header.html
src/: CMakeLists.txt  DECUP_FAKES.cpp  app_main.cpp  bug_led.cpp  bug_led.hpp  config.hpp  doxygen.hpp  drv8328_test.cpp  idf_component.yml  log.h  task.hpp  trace.cpp  trace.hpp  utility.cpp  utility.hpp
src/analog/: adc_task_function.cpp  adc_task_function.hpp  convert.cpp  convert.hpp  current_range.hpp  doxygen.hpp  init.cpp  init.hpp  temp_task_function.cpp  temp_task_function.hpp
src/dcc/: doxygen.hpp  init.cpp  init.hpp  loco.cpp  loco.hpp  locos.hpp  operations_service.cpp  operations_service.hpp  service.cpp  service.hpp  service_service.cpp  service_service.hpp
src/decup/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp  zpp_service.cpp  zpp_service.hpp  zsu_service.cpp  zsu_service.hpp
src/drv/: doxygen.hpp
src/drv/analog/: adc_task_function.cpp  adc_task_function.hpp  convert.cpp  convert.hpp  doxygen.hpp  init.cpp  init.hpp  temp_task_function.cpp  temp_task_function.hpp
src/drv/anlg/: adc_task_function.cpp  adc_task_function.hpp  convert.cpp  convert.hpp  doxygen.hpp  init.cpp  init.hpp  temp_task_function.cpp  temp_task_function.hpp
src/drv/eth/: doxygen.hpp  init.cpp  init.hpp
src/drv/led/: bug.cpp  bug.hpp  doxygen.hpp  init.cpp  init.hpp  wifi.cpp  wifi.hpp
src/drv/trace/: doxygen.hpp  init.cpp  init.hpp
src/drv/wifi/: doxygen.hpp  init.cpp  init.hpp  task_function.cpp  task_function.hpp
src/http/: doxygen.hpp  endpoints.hpp  init.cpp  init.hpp  message.hpp  request.hpp  response.hpp
src/http/ap/: captive_portal.html  index.html  init.cpp  init.hpp  server.cpp  server.hpp
src/http/sta/: endpoints.hpp  init.cpp  init.hpp  server.cpp  server.hpp
src/intf/: doxygen.hpp
src/intf/dns/: doxygen.hpp  init.cpp  init.hpp
src/intf/http/: doxygen.hpp  endpoints.hpp  init.cpp  init.hpp  message.hpp  request.hpp  response.hpp
src/intf/http/ap/: captive_portal.html  dns.cpp  dns.hpp  init.cpp  init.hpp  server.cpp  server.hpp
src/intf/http/sta/: init.cpp  init.hpp  server.cpp  server.hpp
src/intf/mdns/: doxygen.hpp  init.cpp  init.hpp
src/intf/udp/: doxygen.hpp  init.cpp  init.hpp
src/intf/usb/: doxygen.hpp  init.cpp  init.hpp  rx_task_function.cpp  rx_task_function.hpp  tx_task_function.cpp  tx_task_function.hpp
src/led/: bug.cpp  bug.hpp  doxygen.hpp  init.cpp  init.hpp  wifi.cpp  wifi.hpp
src/mdns/: doxygen.hpp  init.cpp  init.hpp
src/mdu/: doxygen.hpp  firmware_service.cpp  firmware_service.hpp  init.cpp  init.hpp  service.cpp  service.hpp  zpp_service.cpp  zpp_service.hpp  zsu_service.cpp  zsu_service.hpp
src/mem/: doxygen.hpp  init.cpp  init.hpp
src/mem/nvs/: accessories.cpp  accessories.hpp  base.cpp  base.hpp  doxygen.hpp  init.cpp  init.hpp  locos.cpp  locos.hpp  settings.cpp  settings.hpp  task_function.cpp  task_function.hpp  turnouts.cpp  turnouts.hpp  utility.cpp  utility.hpp
src/mem/spiffs/: init.cpp  init.hpp
src/mw/: doxygen.hpp
src/mw/dcc/: accessories.hpp  accessory.cpp  accessory.hpp  doxygen.hpp  init.cpp  init.hpp  loco.cpp  loco.hpp  locos.hpp  service.cpp  service.hpp  system_state.cpp  system_state.hpp  turnout.cpp  turnout.hpp  turnouts.hpp
src/mw/decup/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/mw/disp/: doxygen.hpp  init.cpp  init.hpp  task_function.cpp  task_function.hpp
src/mw/display/: init.cpp  init.hpp  service.cpp  service.hpp
src/mw/mdu/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/mw/ota/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/mw/roco/: doxygen.hpp
src/mw/ulf/: doxygen.hpp  init.cpp  init.hpp
src/mw/z21/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/mw/zimo/: doxygen.hpp
src/mw/zusi/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/ota/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/settings/: init.cpp  init.hpp  service.cpp  service.hpp
src/sys/: init.cpp  init.hpp  service.cpp  service.hpp
src/trace/: doxygen.hpp  init.cpp  init.hpp
src/udp/: doxygen.hpp  init.cpp  init.hpp
src/ulf/: doxygen.hpp  init.cpp  init.hpp
src/ulf/dcc_ein/: task_function.cpp  task_function.hpp
src/ulf/decup_ein/: task_function.cpp  task_function.hpp
src/ulf/susiv2/: task_function.cpp  task_function.hpp
src/usb/: doxygen.hpp  init.cpp  init.hpp  rx_task_function.cpp  rx_task_function.hpp  tx_task_function.cpp  tx_task_function.hpp
src/usb/dcc_ein/: rx_task_function.cpp  rx_task_function.hpp  task_function.cpp  task_function.hpp  tx_task_function.cpp  tx_task_function.hpp
src/usb/decup_ein/: task_function.cpp  task_function.hpp
src/usb/susiv2/: rx_task_function.cpp  rx_task_function.hpp  task_function.cpp  task_function.hpp  tx_task_function.cpp  tx_task_function.hpp
src/usb/ulf_dcc_ein/: task_function.cpp  task_function.hpp
src/usb/ulf_decup_ein/: task_function.cpp  task_function.hpp
src/usb/ulf_susiv2/: task_function.cpp  task_function.hpp
src/wifi/: doxygen.hpp  init.cpp  init.hpp  task_function.cpp  task_function.hpp
src/z21/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
src/zusi/: doxygen.hpp  init.cpp  init.hpp  service.cpp  service.hpp
tests/: CMakeLists.txt  app_main.cpp  freertos_helpers.cpp  freertos_helpers.hpp  utility.cpp
tests/dcc/: dcc_test.cpp  dcc_test.hpp  loco.cpp
tests/http/sta/: endpoints_map.cpp  endpoints_map_test.hpp
tests/intf/http/: endpoints.cpp  endpoints_map.cpp  endpoints_test.cpp  endpoints_test.hpp  subscriber_mock.hpp
tests/intf/usb/: usb.cpp  usb_test.cpp  usb_test.hpp
tests/mw/dcc/: dcc_test.cpp  dcc_test.hpp  loco.cpp  turnout.cpp
tests/usb/: usb.cpp  usb_test.cpp  usb_test.hpp
tests/usb/dcc_ein/: dcc_ein.cpp  dcc_ein_test.hpp
tests/usb/ulf_dcc_ein/: ulf_dcc_ein.cpp  ulf_dcc_ein_test.hpp
(+51 files in other folders)
